# FORI-GED

./: CMakeLists.txt  README.md
data/AIDS/: 100.gxl  1000.gxl  10000.gxl  1001.gxl  10071.gxl  10079.gxl  10084.gxl  10085.gxl  10093.gxl  10094.gxl  10099.gxl  10101.gxl  10102.gxl  10104.gxl  10109.gxl  1012.gxl  10122.gxl  10135.gxl  1014.gxl  1015.gxl  10151.gxl  1017.gxl  10170.gxl  1018.gxl  10180.gxl  1019.gxl  10193.gxl  102.gxl  10226.gxl  10245.gxl  10247.gxl  10248.gxl  10255.gxl  10256.gxl  10257.gxl  1026.gxl  10293.gxl  10295.gxl  1030.gxl  10301.gxl  (+1961 more)
data/IMDB/: 1.csv  1000.csv  1001.csv  1002.csv  1006.csv  101.csv  1010.csv  1015.csv  102.csv  1021.csv  1022.csv  1026.csv  1032.csv  1037.csv  1038.csv  1039.csv  104.csv  1042.csv  1046.csv  1048.csv  1051.csv  1052.csv  1056.csv  1057.csv  1059.csv  106.csv  1061.csv  1062.csv  1064.csv  1066.csv  107.csv  1072.csv  1073.csv  1074.csv  1075.csv  1077.csv  1078.csv  1079.csv  108.csv  1080.csv  (+667 more)
data/Mutagenicity/: Mutagenicity91-100.xml  bin_10-19.txt  bin_100-109.txt  bin_20-29.txt  bin_30-39.txt  bin_40-49.txt  bin_50-59.txt  bin_60-69.txt  bin_70-79.txt  bin_80-89.txt  bin_90-99.txt  molecule_test_1.gxl  molecule_test_2.gxl
data/Protein-GED/: ProteinCostFunction.java
data/Protein-GED/Protein-low-level-info/: Protein20-lowlevelinfo.csv  Protein30-lowlevelinfo.csv  Protein40-lowlevelinfo.csv  ProteinMIX-lowlevelinfo.csv
data/Protein-GED/Protein-subsets/: Protein51-60.xml  mixed-graphs.cxl  train20.cxl  train30.cxl  train40.cxl
data/SubgraphPattern/: edgelistRandomLabels.py  gxlToEdgelist.py  hop-EgoNetworks.py  sampleEgoNetworks.py
data/SubgraphPattern/Patterns/: cora_1160_15_15.edgelist  cora_1471_11_12.edgelist  cora_1471_20_19.edgelist  cora_205_10_9.edgelist  cora_205_7_7.edgelist  cora_2291_10_9.edgelist  cora_2291_15_14.edgelist  cora_2291_20_20.edgelist  cora_332_5_4.edgelist  pubmed_12977_10_12.edgelist  pubmed_12977_15_14.edgelist  pubmed_12977_20_19.edgelist  pubmed_17904_15_17.edgelist  pubmed_17904_20_19.edgelist  pubmed_8944_10_11.edgelist  pubmed_8944_15_14.edgelist  pubmed_8944_7_7.edgelist
data/SubgraphPattern/largeGraphs/: Pubmed-Diabetes_19717_44327.edgelist  cora_edges_2708_5278.edgelist  cora_hop_1302_1543_2631.edgelist  cora_hop_1302_2286_4589.edgelist  cora_hop_1302_724_1002.edgelist  cora_hop_939_1098_1866.edgelist  cora_hop_939_1748_3135.edgelist  cora_hop_939_2200_4389.edgelist  pubmed_hop_10015_13983_31284.edgelist  pubmed_hop_10015_17932_41083.edgelist  pubmed_hop_10015_1900_3369.edgelist  pubmed_hop_10015_19266_43684.edgelist  pubmed_hop_10015_7175_13660.edgelist  pubmed_hop_5478_1167_1437.edgelist  pubmed_hop_5478_13623_27505.edgelist  pubmed_hop_5478_18497_41880.edgelist  pubmed_hop_5478_19706_44309.edgelist  pubmed_hop_5478_6424_9495.edgelist
data/SubgraphPattern/originalFiles/: cora_pattern1.csv  cora_pattern2.csv  cora_pattern3.csv  transformCsvToEdgelist.py  transformTabToEdgelist.py
data/solution_files/: README.md  convert_solution.py
data/solution_files/aids70vldbj_gedsol/: aids_11100_11100_F2+_1.gedsol  aids_11100_16179_F2+_1.gedsol  aids_11100_16179_F2+_2.gedsol  aids_11100_16179_F2+_3.gedsol  aids_11100_16179_FORI_1.gedsol  aids_11100_16179_FORI_2.gedsol  aids_11100_16179_FORI_3.gedsol  aids_11100_17835_F2+_1.gedsol  aids_11100_17835_F2+_2.gedsol  aids_11100_17835_F2+_3.gedsol  aids_11100_17835_FORI_1.gedsol  aids_11100_17835_FORI_2.gedsol  aids_11100_17835_FORI_3.gedsol  aids_11100_23752_F2+_1.gedsol  aids_11100_23752_F2+_2.gedsol  aids_11100_23752_F2+_3.gedsol  aids_11100_23752_FORI_1.gedsol  aids_11100_23752_FORI_2.gedsol  aids_11100_23752_FORI_3.gedsol  aids_16179_16179_F2+_1.gedsol  aids_16179_16179_FORI_1.gedsol  aids_16179_16179_FORI_2.gedsol  aids_16179_16179_FORI_3.gedsol  aids_17834_11100_F2+_1.gedsol  aids_17834_11100_F2+_2.gedsol  aids_17834_11100_F2+_3.gedsol  aids_17834_11100_FORI_1.gedsol  aids_17834_11100_FORI_2.gedsol  aids_17834_11100_FORI_3.gedsol  aids_17834_16179_F2+_1.gedsol  aids_17834_16179_F2+_2.gedsol  aids_17834_16179_F2+_3.gedsol  aids_17834_16179_FORI_1.gedsol  aids_17834_16179_FORI_2.gedsol  aids_17834_16179_FORI_3.gedsol  aids_17834_17834_F2+_1.gedsol  aids_17834_17835_F2+_1.gedsol  aids_17834_17835_F2+_3.gedsol  aids_17834_17835_FORI_1.gedsol  aids_17834_17835_FORI_2.gedsol  (+237 more)
data/solution_files/muta90vldbj_gedsol/: muta_2490_2490_F1+_1.gedsol  muta_2490_2490_F1+_2.gedsol  muta_2490_2490_F1+_3.gedsol  muta_2490_2490_F2+_3.gedsol  muta_2490_2490_FORI_1.gedsol  muta_2490_2490_FORI_2.gedsol  muta_2490_2490_FORI_3.gedsol  muta_2490_267_F1+_1.gedsol  muta_2490_267_F1+_2.gedsol  muta_2490_267_F1+_3.gedsol  muta_2490_267_F2+_1.gedsol  muta_2490_267_F2+_2.gedsol  muta_2490_267_F2+_3.gedsol  muta_2490_267_FORI_1.gedsol  muta_2490_267_FORI_2.gedsol  muta_2490_267_FORI_3.gedsol  muta_2490_292_F1+_1.gedsol  muta_2490_292_F1+_2.gedsol  muta_2490_292_F1+_3.gedsol  muta_2490_292_F2+_1.gedsol  muta_2490_292_F2+_2.gedsol  muta_2490_292_F2+_3.gedsol  muta_2490_292_FORI_1.gedsol  (+446 more)
include/auxiliary/: GXLGraphReader.hpp  base.hpp  cxxopts.hpp  gedlib_costs.hpp  graph.hpp  io.hpp  json.hpp  options.hpp
include/gurobi/: F1plus.hpp  F2.hpp  F2plus.hpp  FORI.hpp  no_branching_cb.hpp  root_relaxation_cb.hpp
scripts/: q1_script_execute_mps.sh  q2_script_execute_mps.sh  testing_gurobi_aids_21_30.sh  testing_gurobi_aids_31_40.sh  testing_gurobi_aids_41_50.sh  testing_gurobi_aids_51_60.sh  testing_gurobi_aids_61_70.sh  testing_gurobi_aids_71_80.sh  testing_gurobi_muta_21_30.sh  testing_gurobi_muta_31_40.sh  testing_gurobi_muta_41_50.sh  testing_gurobi_muta_51_60.sh  testing_gurobi_muta_61_70.sh  testing_gurobi_muta_71_80.sh  testing_gurobi_muta_81_90.sh  testing_gurobi_muta_91_100.sh  testing_gurobi_protein_21_30.sh  testing_gurobi_protein_31_40.sh  testing_gurobi_protein_41_50.sh  testing_gurobi_protein_51_60.sh  testing_imdb_10.sh  testing_imdb_20.sh  testing_imdb_30.sh  testing_imdb_43.sh
src/executables/: gurobi_aids.cpp  gurobi_imdb.cpp  gurobi_muta.cpp  gurobi_protein.cpp  subgraph_pattern.cpp
src/utils/: GXLGraphReader.cpp  io.cpp
